# style-checker

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  TODO.md
UnitTests/: CMakeLists.txt
UnitTests/src/: LineSplitterTest.cpp
src/: AFileStream.cpp  AFileStream.hpp  AFileStreamReader.hpp  Algorithm.hpp  Configuration.cpp  Configuration.hpp  Diagnostics.cpp  Diagnostics.hpp  FilePathReader.cpp  FilePathReader.hpp  FileStreamFromArgs.cpp  FileStreamFromArgs.hpp  FileStreamFromInput.cpp  FileStreamFromInput.hpp  FileStreamHandler.cpp  FileStreamHandler.hpp  LineEnding.cpp  LineEnding.hpp  LineSplitter.cpp  LineSplitter.hpp  TextLine.cpp  TextLine.hpp  Tree.hpp  main.cpp
src/Log/: ALogger.hpp  ConsoleLogger.cpp  ConsoleLogger.hpp  Log.cpp  Log.hpp  LogData.cpp  LogData.hpp
